[package]
name = "drawing-wasm"
version = "0.1.0"
authors = ["poccariswet <poccariswet2727@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

console_error_panic_hook = { version = "0.1.1", optional = true }

wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'Window',
  'Node',
  'HtmlElement',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'MouseEvent',
  'EventTarget',
  'CssStyleDeclaration',
  'ImageData',
  'HtmlInputElement',
  'HtmlImageElement',
  'Event',
]
